syntax = "proto3";
package canto.vesting.v1;

import "cosmos/base/v1beta1/coin.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/Canto-Network/canto/v3/x/vesting/types";

// Query defines the gRPC querier service.
service Query {
  // Retrieves the unvested, vested and locked tokens for a vesting account
  rpc Balances(QueryBalancesRequest) returns (QueryBalancesResponse) {
    option (google.api.http).get = "/canto/vesting/v1/balances/{address}";
  }
}

// QueryBalancesRequest is the request type for the Query/Balances RPC method.
message QueryBalancesRequest {
  // address of the clawback vesting account
  string address = 1;
}

// QueryBalancesResponse is the response type for the Query/Balances RPC
// method.
message QueryBalancesResponse {
  // current amount of locked tokens
  repeated cosmos.base.v1beta1.Coin locked = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // current amount of unvested tokens
  repeated cosmos.base.v1beta1.Coin unvested = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // current amount of vested tokens
  repeated cosmos.base.v1beta1.Coin vested = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}